--- a/src/blocks/element/__button-trash/element__button-trash.css
+++ b/src/blocks/element/__button-trash/element__button-trash.css
@@ -1,18 +1,22 @@
 .element__button-trash {
-  position: absolute;
-  top: 20px;
-  right: 20px;
+  display: none;
   width: 18px;
   height: 19px;
-  outline: none;
+  padding: 0;
   border: none;
-  background-image: url(../../../images/button-trash.svg);
-  background-color: transparent;
-  filter: drop-shadow(0 0 1px rgba(0, 0, 0, .25));
-  transition: opacity .2s linear;
+  background: none;
   cursor: pointer;
+  background-image: url(../../../images/button-trash.svg);
+  background-repeat: no-repeat;
+  background-color: transparent;
+  position: absolute;
+  flex-shrink: 0;
+  transition: all 0.2s ease-in;
+  top: 20px;
+  right: 20px;
+  z-index: 1;
 }
   
 .element__button-trash:hover {
-  opacity: .6;
+  opacity: .5;
 }
