--- a/src/blocks/element/__image/element__image.css
+++ b/src/blocks/element/__image/element__image.css
@@ -1,10 +1,10 @@
 .element__image {
-    width: 100%;
-    height: 282px;
-    object-fit: cover;
-    transition: all .4s ease;
+  width: 100%;
+  height: 282px;
+  object-fit: cover;
+  transition: all 0.4s ease;
 }
 
 .element__image:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
