--- a/src/blocks/profile/__description/profile__description.css
+++ b/src/blocks/profile/__description/profile__description.css
@@ -1,18 +1,17 @@
-
 .profile__description {
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   margin: 0;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.21;
-  color: #FFFFFF;
+  color: #ffffff;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   width: 80%;
 }
-  
+
 @media screen and (max-width: 1279px) {
   .profile__description {
     font-size: 14px;
