--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -1,7 +1,7 @@
 .root {
-    width: 100%;
-    min-width: 320px;
-    font-family: 'Inter', Arial, sans-serif;
-    margin: 0 auto;
-    position: relative;
+  width: 100%;
+  min-width: 320px;
+  font-family: "Inter", Arial, sans-serif;
+  margin: 0 auto;
+  position: relative;
 }
